----------------------------------
SimpleMail Open Source - ChangeLog
----------------------------------

2007-02-04  Bernd Gollesch <bgollesch@sime.at>
	* amiga-mui/searchwnd.c: The MailTreelist is now build with the correct function
	  (it now has scrollbars if necessary).
	* amiga-mui/mailtreelistclass-new.c: Added two missing recalcs of the horizontal
	  scrollbar.

2007-02-03  Bernd Gollesch <bgollesch@sime.at>
	* amiga-mui/filterruleclass.c, amiga-mui/filterwnd.c, amiga-mui/support.c,
	  filter.(c|h), folder.c, indep-include/support.h, doc/amiga/SimpleMail.guide:
	  Added three new options for the filterrules: "Substring", "Case sensitive"
	  and "Pattern". The last option is especially for Chris Handley (fixes
	  bug #1425069).
	  The pattern in the search window will be interpreted with "Substring" and
	  "Pattern" set (not yet configurable).
	* amiga-mui/mailtreelistclass-new.c: Reworked the support for the NewMouse standard.
	  Now the mousewheel will scroll only by one line and faster while one of the SHIFT-keys
	  will be held down. Horizontal scrolling is now also supported with the second wheel
	  or with the first wheel and holding down one of the ALT-keys.

2007-02-02  Bernd Gollesch <bgollesch@sime.at>
	* amiga-mui/mailtreelistclass-new.c: Added a SORT[12]MASK for the column flags.
	  The NoRecipient image will only be shown in a send-folder (as it was before).
	  Added the MUIA_MailTreelist_TitleClick2 for the secondary sort when shift-clicked
	  in the title row.
	  Corrected the parameter for the MUIM_DrawBackground calls.
	  Corrected the DrawEntry() call when not in bufferd drawing mode.
	  Added special truncation for the subject column.
	* amiga-mui/mainwnd.c: Added the MUIA_MailTreelist_TitleClick2 for the secondary
	  sort when shift-clicked in the title row.
	* folder.(c|h): Need the mail_get_compare_subject() function for the new subject
	  truncation in the mailtreelistclass-new.

2007-01-31  Bernd Gollesch <bgollesch@sime.at>